add error handling middleware - 400 error - 500 error

--- a/public/500.html
+++ b/public/500.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>500 Error</title>
 </head>
 <body>
-    Welcome to Home!
+    Error 500 - Something Went Wrong
 </body>
 </html>
-
